# quart-sse-demo

./: README.md  pyproject.toml  run.sh
src/quart_sse_demo/: clients.py  server.py
src/quart_sse_demo/templates/: base.html  message_partial.jinja  status_partial.jinja
